# ByteTrack-cpp

./: .gitignore  CMakeLists.txt
include/ByteTrack/: BYTETracker.h  KalmanFilter.h  Object.h  Rect.h  STrack.h  bytetrack_c.h  lapjv.h
motion_camera_tracking/: CMakeLists.txt
motion_camera_tracking/include/: motion_estimator_c_api.h
motion_camera_tracking/src/: motion_estimator_c_api.cpp
python/: run_bytetrack_video.py  run_cvtracker_video.py  run_motion_estimator_video.py
src/: BYTETracker.cpp  STrack.cpp  bytetrack_c.cpp
tracker/: CMakeLists.txt
tracker/include/: cvtracker_c.h
tracker/src/: cvtracker.cpp
